# openMax

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  fib.py  goodbye.py  install_skills.sh  prime.py  pyproject.toml  stack.py  utils.py
.claude/commands/: commit.md  debug.md  lint.md  openmax.md  release.md  test.md
.github/workflows/: ci.yml  pages.yml
.openmax/reports/: report-version.md
docs/: ROADMAP.md  UX_GUIDELINES.md  WORKFLOW_DESIGN.md  index.html
docs/designs/: display-layers.md
docs/experience/: README.md
docs/memory/: long-term.md
docs/tasks/: _index.md  next-features.md  p0_1.1_structured_decomposition.md  p0_4.1_stuck_detection.md  p0_5.2_build_verification.md  p1_10.1_failure_auto_retry.md  p1_11.1_branch_isolation.md  p1_6.3_token_tracking.md  p1_7.1_memory_eviction.md  p1_8.1_phase_gating.md  p2_11.2_context_compression.md  p2_11.3_cost_convergence.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: publish.sh
skills/: codex.md  commit.md  debug.md  lint.md  openmax.md  release.md  research.md  test.md
src/openmax/: __init__.py  _paths.py  agent_registry.py  auth.py  banner.py  (+33 more)
tests/: conftest.py  test_adapters.py  test_agent_registry.py  test_archetypes.py  test_auth.py  test_banner.py  test_benchmark.py  test_ci_smoke.py  test_ci_workflow.py  test_clean.py  test_cli.py  test_console_capture.py  test_costing.py  test_dag.py  test_dashboard.py  test_dispatch.py  test_doctor.py  test_e2e.py  test_employees.py  test_formatting.py  test_helpers.py  test_imports.py  test_integration.py  test_lead_agent.py  test_loop_session.py  test_mailbox.py  test_mcp_server.py  test_memory.py  test_memory_system.py  test_merge.py  test_pane_backend.py  test_pane_manager.py  test_planning.py  test_project_registry.py  test_project_tools.py  test_provider_usage.py  test_quality_workflow.py  test_report.py  test_roles.py  test_scripts.py  (+20 more)
(+88 files in other folders)
