[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmax"
version = "0.3.0"
description = "Multi AI Agent orchestration hub — dispatch interactive AI agents across terminal panes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chen Kailun" },
]
keywords = ["ai", "agent", "orchestration", "multi-agent", "claude", "codex", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "click>=8.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/cklxx/openMax"
Repository = "https://github.com/cklxx/openMax"
Changelog = "https://github.com/cklxx/openMax/blob/main/CHANGELOG.md"

[project.scripts]
openmax = "openmax.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openmax"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
